--- a/pen/index.html
+++ b/pen/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>RunJS</title>
-	<link href="./styles/app.ad13149652b5ebce4bb9.css" rel="stylesheet"></head>
+	<link href="/styles/app.055fa72c198b89b63c80.css" rel="stylesheet"></head>
 	<body>
 		<div id="root"></div>
-	<script type="text/javascript" src="./modules/app.ad13149652b5ebce4bb9.js"></script></body>
+	<script type="text/javascript" src="/modules/app.055fa72c198b89b63c80.js"></script></body>
 </html>
