--- a/pen/index.html
+++ b/pen/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>RunJS</title>
-	<link href="./styles/app.42b6a4e6e4e8d2d93f91.css" rel="stylesheet"></head>
+	<link rel="shortcut icon" href="./favicon.ico"><link href="./styles/app.1ac0ade95129f336873b.css" rel="stylesheet"></head>
 	<body>
 		<div id="root"></div>
-	<script type="text/javascript" src="./modules/app.42b6a4e6e4e8d2d93f91.js"></script></body>
+	<script type="text/javascript" src="./modules/app.1ac0ade95129f336873b.js"></script></body>
 </html>
