--- a/pen/index.html
+++ b/pen/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>RunJS</title>
-	<link rel="shortcut icon" href="./favicon.ico"><link href="./styles/app.1ac0ade95129f336873b.css" rel="stylesheet"></head>
+		<title>PenEditor -- A simple editor</title>
+	<link rel="shortcut icon" href="./favicon.ico"><link href="./styles/app.57555c51d6f1246adab8.css" rel="stylesheet"></head>
 	<body>
 		<div id="root"></div>
-	<script type="text/javascript" src="./modules/app.1ac0ade95129f336873b.js"></script></body>
+	<script type="text/javascript" src="./modules/app.57555c51d6f1246adab8.js"></script></body>
 </html>
