--- a/pen/index.html
+++ b/pen/index.html
@@ -4,8 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>PenEditor -- A simple editor</title>
-	<link rel="shortcut icon" href="./favicon.ico"><link href="./styles/app.059abdbdb58b244dad9d.css" rel="stylesheet"></head>
+		<style>
+			html,body {
+				width: 100%;
+				height: 100%;
+				background: #323b44;
+			}
+		</style>
+	<link rel="shortcut icon" href="./favicon.ico"><link href="./styles/app.3c8c8b6440308cb264aa.css" rel="stylesheet"></head>
 	<body>
 		<div id="root"></div>
-	<script type="text/javascript" src="./modules/app.059abdbdb58b244dad9d.js"></script></body>
+	<script type="text/javascript" src="./modules/app.3c8c8b6440308cb264aa.js"></script></body>
 </html>
