--- a/pen/index.html
+++ b/pen/index.html
@@ -4,15 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>PenEditor -- A simple editor</title>
+		<meta name="keywords" content="code editor,html,css,javascript,jsedito,pen editor,PenEditor,peneditor,codepen,编辑器,代码编辑器" />
+		<meta name="description" content="PenEditor(https://jojowwbb.github.io/pen/index.html):code editor,playground.一个极简的在线html/css/javascript代码编辑,演示平台" />
 		<style>
-			html,body {
+			html,
+			body {
 				width: 100%;
 				height: 100%;
 				background: #323b44;
 			}
 		</style>
-	<link rel="shortcut icon" href="./favicon.ico"><link href="./styles/app.3c8c8b6440308cb264aa.css" rel="stylesheet"></head>
+	<link rel="shortcut icon" href="./favicon.ico"><link href="./styles/app.4c7c12fe04ebfbb96435.css" rel="stylesheet"></head>
 	<body>
 		<div id="root"></div>
-	<script type="text/javascript" src="./modules/app.3c8c8b6440308cb264aa.js"></script></body>
+	<script type="text/javascript" src="./modules/app.4c7c12fe04ebfbb96435.js"></script></body>
 </html>
